working on plotting ies results

--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -151,14 +151,14 @@
     "    print(obs_csv_file)\n",
     "    prefix = obs_csv_file.replace(\".\", \"-\")\n",
     "    df = pd.read_csv(os.path.join(pf.new_d, obs_csv_file), index_col=0)\n",
-    "    pf.add_observations(\n",
+    "    odf = pf.add_observations(\n",
     "        obs_csv_file,\n",
     "        index_cols=\"datetime\",\n",
     "        use_cols=df.columns.to_list(),\n",
     "        prefix=prefix,\n",
-    "        obsgp=prefix,\n",
     "        ofile_sep=\",\",\n",
-    "    )"
+    "    )\n",
+    "    print(odf)"
    ]
   },
   {
@@ -302,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for k_file in k_files[::2]:\n",
+    "for k_file in [k_files[0], k_files[-1]]:\n",
     "    print(k_file)\n",
     "    pf.add_observations(\n",
     "        k_file,\n",
@@ -337,6 +337,12 @@
     "    upper_bound=10.0,\n",
     "    par_name_base=\"k33-cn-conf\",\n",
     "    pargp=\"k33-cn-conf\",\n",
+    ")\n",
+    "\n",
+    "pf.add_observations(\n",
+    "    k33_files[0],\n",
+    "    obsgp=k33_files[0].split(\".\")[1].replace(\"_\", \"-\"),\n",
+    "    prefix=k33_files[0].split(\".\")[1].replace(\"_\", \"-\"),\n",
     ")"
    ]
   },
@@ -634,7 +640,10 @@
    "source": [
     "pe.enforce()\n",
     "pe.to_csv(os.path.join(pf.new_d, \"prior.csv\"))\n",
-    "pst.pestpp_options[\"ies_par_en\"] = \"prior.csv\""
+    "pst.pestpp_options[\"ies_par_en\"] = \"prior.csv\"\n",
+    "pst.pestpp_options[\"ies_num_reals\"] = 30\n",
+    "pst.control_data.noptmax = -1\n",
+    "pst.write(os.path.join(pf.new_d, \"pest.pst\"), version=2)"
    ]
   },
   {
@@ -656,10 +665,7 @@
    "id": "38",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pst.pestpp_options[\"ies_num_reals\"] = 30\n",
-    "pst.control_data.noptmax = -1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -667,9 +673,7 @@
    "id": "39",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pst.write(os.path.join(pf.new_d, \"pest.pst\"), version=2)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -678,14 +682,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pyemu.os_utils.start_workers(\n",
-    "#     pf.new_d,\n",
-    "#     \"pestpp-ies\",\n",
-    "#     \"pest.pst\",\n",
-    "#     worker_root=\".\",\n",
-    "#     num_workers=10,\n",
-    "#     master_dir=\"master_prior_mc\",\n",
-    "# )"
+    "pyemu.os_utils.start_workers(\n",
+    "    pf.new_d,\n",
+    "    \"pestpp-ies\",\n",
+    "    \"pest.pst\",\n",
+    "    worker_root=\".\",\n",
+    "    num_workers=10,\n",
+    "    master_dir=\"master_prior_mc\",\n",
+    ")"
    ]
   },
   {
