added more missing pred wel list files

--- a/exercises/notebooks/SV_advanced.ipynb
+++ b/exercises/notebooks/SV_advanced.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_frequency = \"monthly\"  # monthly or annualname = \"sv\"\n",
+    "sample_frequency = \"annual\"  # monthly or annualname = \"sv\"\n",
     "name = \"sv\"\n",
     "\n",
     "# prep the working model...\n",
