--- a/exercises/notebooks/SV_advanced.ipynb
+++ b/exercises/notebooks/SV_advanced.ipynb
@@ -33,12 +33,12 @@
     "name = \"sv\"\n",
     "\n",
     "# prep the working model...\n",
-    "# base_ws = pl.Path(f\"../models/synthetic-valley-working-{sample_frequency}\")\n",
-    "# advanced_ws = base_ws.parent / f\"synthetic-valley-working-advanced-{sample_frequency}\"\n",
+    "base_ws = pl.Path(f\"../models/synthetic-valley-working-{sample_frequency}\")\n",
+    "advanced_ws = base_ws.parent / f\"synthetic-valley-working-advanced-{sample_frequency}\"\n",
     "\n",
     "# or gen the truth model\n",
-    "base_ws = pl.Path(f\"../models/synthetic-valley-base-{sample_frequency}\")\n",
-    "advanced_ws = base_ws.parent / f\"synthetic-valley-truth-advanced-{sample_frequency}\""
+    "# base_ws = pl.Path(f\"../models/synthetic-valley-base-{sample_frequency}\")\n",
+    "# advanced_ws = base_ws.parent / f\"synthetic-valley-truth-advanced-{sample_frequency}\""
    ]
   },
   {
