fix in working model to keep lake hk

--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -23,10 +23,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-annual\")\n",
-    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-monthly\")\n",
+    "# these are slow as...\n",
+    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-monthly\")\n",
     "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working_advanced-monthly\")\n",
-    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-advanced-annual\")\n",
+    "\n",
+    "\n",
+    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-annual\")\n",
+    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-advanced-annual\")\n",
     "assert os.path.exists(safe_org_d)"
    ]
   },
@@ -190,8 +193,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp_v = pyemu.geostats.ExpVario(contribution=1.0, a=5000)\n",
-    "pp_geostruct = pyemu.geostats.GeoStruct(variograms=pp_v, transform=\"log\")"
+    "pp_v_k = pyemu.geostats.ExpVario(contribution=1.0, a=5000)\n",
+    "pp_geostruct_k = pyemu.geostats.GeoStruct(variograms=pp_v_k, transform=\"log\")\n",
+    "pp_v_k33 = pyemu.geostats.ExpVario(contribution=1.0, a=15000)\n",
+    "pp_geostruct_k33 = pyemu.geostats.GeoStruct(variograms=pp_v_k33, transform=\"log\")\n",
+    "pp_v_ss = pyemu.geostats.ExpVario(contribution=1.0, a=1000)\n",
+    "pp_geostruct_ss = pyemu.geostats.GeoStruct(variograms=pp_v_ss, transform=\"log\")"
    ]
   },
   {
@@ -207,7 +214,7 @@
     "    pp_options={\"pp_space\": 3},\n",
     "    lower_bound=0.1,\n",
     "    upper_bound=10.0,\n",
-    "    geostruct=pp_geostruct,\n",
+    "    geostruct=pp_geostruct_k,\n",
     "    par_name_base=\"hk-pp-wt\",\n",
     "    pargp=\"hk-pp-wt\",\n",
     ")"
@@ -254,7 +261,7 @@
     "    pp_options={\"pp_space\": 3},\n",
     "    lower_bound=0.1,\n",
     "    upper_bound=10.0,\n",
-    "    geostruct=pp_geostruct,\n",
+    "    geostruct=pp_geostruct_k,\n",
     "    par_name_base=\"hk-pp-conf\",\n",
     "    pargp=\"hk-pp-conf\",\n",
     ")\n",
@@ -281,7 +288,7 @@
     "    pp_options={\"pp_space\": 3},\n",
     "    lower_bound=0.1,\n",
     "    upper_bound=10.0,\n",
-    "    geostruct=pp_geostruct,\n",
+    "    geostruct=pp_geostruct_k,\n",
     "    par_name_base=\"hk-pp-aq\",\n",
     "    pargp=\"hk-pp-aq\",\n",
     ")\n",
@@ -318,20 +325,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k33_files = [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.npf_k33_layer3\")]\n",
-    "assert len(k33_files) == 1\n",
+    "k33_files = [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.npf_k33_layer\")]\n",
+    "assert len(k_files) == gwf.dis.nlay.data\n",
+    "k33_files.sort()\n",
+    "\n",
     "df = pf.add_parameters(\n",
-    "    k33_files,\n",
+    "    k33_files[:2],\n",
     "    par_type=\"pilotpoints\",\n",
     "    pp_options={\"pp_space\": 3},\n",
     "    lower_bound=0.1,\n",
     "    upper_bound=10.0,\n",
-    "    geostruct=pp_geostruct,\n",
+    "    geostruct=pp_geostruct_k33,\n",
+    "    par_name_base=\"k33-pp-wt\",\n",
+    "    pargp=\"k33-pp-wt\",\n",
+    ")\n",
+    "df = pf.add_parameters(\n",
+    "    k33_files[:2],\n",
+    "    par_type=\"constant\",\n",
+    "    lower_bound=0.1,\n",
+    "    upper_bound=10.0,\n",
+    "    par_name_base=\"k33-cn-wt\",\n",
+    "    pargp=\"k33-cn-wt\",\n",
+    ")\n",
+    "\n",
+    "pf.add_observations(\n",
+    "    k33_files[0],\n",
+    "    obsgp=k33_files[0].split(\".\")[1].replace(\"_\", \"-\"),\n",
+    "    prefix=k33_files[0].split(\".\")[1].replace(\"_\", \"-\"),\n",
+    ")\n",
+    "\n",
+    "df = pf.add_parameters(\n",
+    "    k33_files[2],\n",
+    "    par_type=\"pilotpoints\",\n",
+    "    pp_options={\"pp_space\": 3},\n",
+    "    lower_bound=0.1,\n",
+    "    upper_bound=10.0,\n",
+    "    geostruct=pp_geostruct_k33,\n",
     "    par_name_base=\"k33-pp-conf\",\n",
     "    pargp=\"k33-pp-conf\",\n",
     ")\n",
     "df = pf.add_parameters(\n",
-    "    k33_files,\n",
+    "    k33_files[2],\n",
     "    par_type=\"constant\",\n",
     "    lower_bound=0.1,\n",
     "    upper_bound=10.0,\n",
@@ -340,9 +374,35 @@
     ")\n",
     "\n",
     "pf.add_observations(\n",
-    "    k33_files[0],\n",
-    "    obsgp=k33_files[0].split(\".\")[1].replace(\"_\", \"-\"),\n",
-    "    prefix=k33_files[0].split(\".\")[1].replace(\"_\", \"-\"),\n",
+    "    k33_files[2],\n",
+    "    obsgp=k33_files[2].split(\".\")[1].replace(\"_\", \"-\"),\n",
+    "    prefix=k33_files[2].split(\".\")[1].replace(\"_\", \"-\"),\n",
+    ")\n",
+    "\n",
+    "\n",
+    "df = pf.add_parameters(\n",
+    "    k33_files[3:],\n",
+    "    par_type=\"pilotpoints\",\n",
+    "    pp_options={\"pp_space\": 3},\n",
+    "    lower_bound=0.1,\n",
+    "    upper_bound=10.0,\n",
+    "    geostruct=pp_geostruct_k33,\n",
+    "    par_name_base=\"k33-pp-aq\",\n",
+    "    pargp=\"k33-pp-aq\",\n",
+    ")\n",
+    "df = pf.add_parameters(\n",
+    "    k33_files[3:],\n",
+    "    par_type=\"constant\",\n",
+    "    lower_bound=0.1,\n",
+    "    upper_bound=10.0,\n",
+    "    par_name_base=\"k33-cn-aq\",\n",
+    "    pargp=\"k33-cn-aq\",\n",
+    ")\n",
+    "\n",
+    "pf.add_observations(\n",
+    "    k33_files[-1],\n",
+    "    obsgp=k33_files[-1].split(\".\")[1].replace(\"_\", \"-\"),\n",
+    "    prefix=k33_files[-1].split(\".\")[1].replace(\"_\", \"-\"),\n",
     ")"
    ]
   },
@@ -370,7 +430,7 @@
     "    pp_options={\"pp_space\": 3},\n",
     "    lower_bound=0.2,\n",
     "    upper_bound=5.0,\n",
-    "    geostruct=pp_geostruct,\n",
+    "    geostruct=pp_geostruct_ss,\n",
     "    par_name_base=\"ss-pp-wt\",\n",
     "    pargp=\"ss-pp-wt\",\n",
     ")\n",
@@ -388,7 +448,7 @@
     "    pp_options={\"pp_space\": 3},\n",
     "    lower_bound=0.2,\n",
     "    upper_bound=5.0,\n",
-    "    geostruct=pp_geostruct,\n",
+    "    geostruct=pp_geostruct_ss,\n",
     "    par_name_base=\"ss-pp-conf\",\n",
     "    pargp=\"ss-pp-conf\",\n",
     ")\n",
@@ -406,7 +466,7 @@
     "    pp_options={\"pp_space\": 3},\n",
     "    lower_bound=0.2,\n",
     "    upper_bound=5.0,\n",
-    "    geostruct=pp_geostruct,\n",
+    "    geostruct=pp_geostruct_ss,\n",
     "    par_name_base=\"ss-pp-aq\",\n",
     "    pargp=\"ss-pp-aq\",\n",
     ")\n",
@@ -417,6 +477,24 @@
     "    upper_bound=2.0,\n",
     "    par_name_base=\"ss-cn-aq\",\n",
     "    pargp=\"ss-cn-aq\",\n",
+    ")\n",
+    "\n",
+    "pf.add_observations(\n",
+    "    ss_files[0],\n",
+    "    obsgp=ss_files[0].split(\".\")[1].replace(\"_\", \"-\"),\n",
+    "    prefix=ss_files[0].split(\".\")[1].replace(\"_\", \"-\"),\n",
+    ")\n",
+    "\n",
+    "pf.add_observations(\n",
+    "    ss_files[2],\n",
+    "    obsgp=ss_files[2].split(\".\")[1].replace(\"_\", \"-\"),\n",
+    "    prefix=ss_files[2].split(\".\")[1].replace(\"_\", \"-\"),\n",
+    ")\n",
+    "\n",
+    "pf.add_observations(\n",
+    "    ss_files[-1],\n",
+    "    obsgp=ss_files[-1].split(\".\")[1].replace(\"_\", \"-\"),\n",
+    "    prefix=ss_files[-1].split(\".\")[1].replace(\"_\", \"-\"),\n",
     ")"
    ]
   },
@@ -447,7 +525,7 @@
     "    pp_options={\"pp_space\": 3},\n",
     "    lower_bound=0.2,\n",
     "    upper_bound=5.0,\n",
-    "    geostruct=pp_geostruct,\n",
+    "    geostruct=pp_geostruct_ss,\n",
     "    par_name_base=\"sy-pp-wt\",\n",
     "    pargp=\"sy-pp-wt\",\n",
     ")\n",
@@ -458,6 +536,11 @@
     "    upper_bound=2.0,\n",
     "    par_name_base=\"sy-cn-wt\",\n",
     "    pargp=\"sy-cn-wt\",\n",
+    ")\n",
+    "pf.add_observations(\n",
+    "    sy_file,\n",
+    "    obsgp=sy_file.split(\".\")[1].replace(\"_\", \"-\"),\n",
+    "    prefix=sy_file.split(\".\")[1].replace(\"_\", \"-\"),\n",
     ")"
    ]
   },
