--- a/exercises/notebooks/SV_obsvals_weights_noise.ipynb
+++ b/exercises/notebooks/SV_obsvals_weights_noise.ipynb
@@ -11,6 +11,7 @@
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "import pyemu"
    ]
   },
@@ -47,7 +48,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pst = pyemu.Pst(os.path.join(working_d, \"pest.pst\"))"
+    "smoothed = obsdf.rolling(window=18, center=True, min_periods=1).mean()\n",
+    "for col in smoothed.columns:\n",
+    "    fig, ax = plt.subplots(1, 1, figsize=(6, 3))\n",
+    "    smoothed.loc[:, col].plot(ax=ax, c=\"g\")\n",
+    "    obsdf.loc[:, col].plot(ax=ax, c=\"m\")\n",
+    "    ax.set_title(col, loc=\"left\")\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -57,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs = pst.observation_data"
+    "pst = pyemu.Pst(os.path.join(working_d, \"pest.pst\"))"
    ]
   },
   {
@@ -67,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nnobs = obs.loc[pd.notna(obs.usecol), :]"
+    "obs = pst.observation_data"
    ]
   },
   {
@@ -77,7 +85,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prefixes = [\"wt\", \"aq\", \"lake-stage\", \"lake-swgw\", \"riv-flow\", \"riv-swgw\"]\n",
+    "nnobs = obs.loc[pd.notna(obs.usecol), :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prefixes = [\"wt\", \"aq\", \"lake-stage\", \"lake-swgw\", \"riv-flow\", \"riv-swgw\", \"diff\"]\n",
     "for prefix in prefixes:\n",
     "    print(prefix)\n",
     "    uobs = nnobs.loc[nnobs.usecol.str.contains(prefix), :].copy()\n",
@@ -85,14 +103,14 @@
     "    for usecol in uobs.usecol.unique():\n",
     "        uuobs = uobs.loc[uobs.usecol == usecol, :].copy()\n",
     "        for dt, name in zip(uuobs.datetime, uuobs.obsnme):\n",
-    "            oval = obsdf.loc[dt, usecol]\n",
+    "            oval = smoothed.loc[dt, usecol]\n",
     "            obs.loc[name, \"obsval\"] = oval"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,38 +135,15 @@
     "    hist_uobs = uobs.loc[uobs.datetime.dt.year < 2015, :]\n",
     "    obs.loc[hist_uobs.obsnme, \"datetime\"] = hist_uobs.datetime\n",
     "    if \"lake\" in prefix:\n",
-    "        obs.loc[hist_uobs.obsnme, \"weight\"] = 1.0\n",
-    "        obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = 1.0\n",
+    "        obs.loc[hist_uobs.obsnme, \"weight\"] = 3.0\n",
+    "        obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = 0.3\n",
     "    elif \"diff\" in prefix:\n",
     "        obs.loc[hist_uobs.obsnme, \"weight\"] = 5.0\n",
-    "        obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = 0.01\n",
-    "\n",
+    "        obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = 0.05\n",
+    "        pass\n",
     "    else:\n",
     "        obs.loc[hist_uobs.obsnme, \"weight\"] = 2.0\n",
     "        obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = 0.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if \"riv-flow\" in obs.usecol.unique():\n",
-    "    uobs = nnobs.loc[nnobs.usecol == \"riv-flow\", :]\n",
-    "    uobs[\"datetime\"] = pd.to_datetime(uobs.datetime)\n",
-    "    hist_uobs = uobs.loc[uobs.datetime.dt.year < 2015, :].copy()\n",
-    "    hist_uobs[\"standard_deviation\"] = [\n",
-    "        max(0.1, oval * 0.1) for oval in hist_uobs.obsval.values\n",
-    "    ]\n",
-    "    obs.loc[hist_uobs.obsnme, \"weight\"] = 0.000005\n",
-    "    obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = (\n",
-    "        hist_uobs.standard_deviation.values\n",
-    "    )\n",
-    "    obs.loc[hist_uobs.obsnme, \"datetime\"] = hist_uobs.datetime\n",
-    "\n",
-    "    print(hist_uobs)"
    ]
   },
   {
@@ -158,13 +153,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pst.nnz_obs_groups"
+    "if \"riv-flow\" in obs.usecol.unique():\n",
+    "    uobs = nnobs.loc[nnobs.usecol == \"riv-flow\", :]\n",
+    "    uobs[\"datetime\"] = pd.to_datetime(uobs.datetime)\n",
+    "    hist_uobs = uobs.loc[uobs.datetime.dt.year < 2015, :].copy()\n",
+    "    hist_uobs[\"standard_deviation\"] = [\n",
+    "        max(0.1, oval * 0.1) for oval in np.abs(hist_uobs.obsval.values)\n",
+    "    ]\n",
+    "    hist_uobs.loc[hist_uobs.obsnme, \"weight\"] = 1 / hist_uobs.standard_deviation.values\n",
+    "    obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = (\n",
+    "        hist_uobs.standard_deviation.values\n",
+    "    )\n",
+    "    obs.loc[hist_uobs.obsnme, \"weight\"] = hist_uobs.weight.values\n",
+    "    obs.loc[hist_uobs.obsnme, \"datetime\"] = hist_uobs.datetime\n",
+    "\n",
+    "    print(hist_uobs.loc[:, [\"obsval\", \"standard_deviation\", \"weight\"]])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pst.nnz_obs_groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,19 +209,9 @@
     "    gobs[\"datetime\"] = pd.to_datetime(gobs.datetime)\n",
     "    gobs[\"distance\"] = (gobs.datetime - gobs.datetime.min()).dt.days\n",
     "    obs.loc[gobs.obsnme, \"distance\"] = gobs.distance\n",
-    "    v = pyemu.geostats.ExpVario(contribution=1.0, a=365 * 5)\n",
+    "    v = pyemu.geostats.ExpVario(contribution=1.0, a=365 * 20)\n",
     "    gs = pyemu.geostats.GeoStruct(variograms=v, name=grp)\n",
     "    struct_dict[gs] = gobs.obsnme.to_list()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "noise = pyemu.helpers.autocorrelated_draw(pst, struct_dict, num_reals=1000)"
    ]
   },
   {
@@ -212,13 +221,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "noise"
+    "noise = pyemu.helpers.autocorrelated_draw(pst, struct_dict, num_reals=1000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,12 +268,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pst.control_data.noptmax = 5\n",
-    "pst.pestpp_options[\"ies_num_reals\"] = 100\n",
+    "pst.control_data.noptmax = 2\n",
+    "pst.pestpp_options[\"ies_num_reals\"] = 50\n",
+    "pst.pestpp_options[\"ies_bad_phi_sigma\"] = 1.75\n",
     "pst.write(os.path.join(working_d, \"pest.pst\"), version=2)\n",
     "pyemu.os_utils.start_workers(\n",
     "    working_d,\n",
@@ -269,7 +289,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": []
