--- a/exercises/synthetic-valley/SV_flopy.ipynb
+++ b/exercises/synthetic-valley/SV_flopy.ipynb
@@ -872,7 +872,8 @@
    "source": [
     "obs_loc = {}\n",
     "obs_loc[f\"{name}.gwf.wt.csv\"] = [\n",
-    "    (f\"wt{idx + 1:02d}\", \"HEAD\", (0, i, j)) for idx, (i, j) in enumerate(obs_rc_locs)\n",
+    "    (f\"wt{idx + 1:02d}-i{i}-j{j}\", \"HEAD\", (0, i, j))\n",
+    "    for idx, (i, j) in enumerate(obs_rc_locs)\n",
     "]"
    ]
   },
@@ -884,7 +885,7 @@
    "outputs": [],
    "source": [
     "obs_loc[f\"{name}.gwf.aq.csv\"] = [\n",
-    "    (f\"aq{idx + 1:02d}\", \"HEAD\", (aq_layer[idx], i, j))\n",
+    "    (f\"aq{idx + 1:02d}-i{i}-j{j}\", \"HEAD\", (aq_layer[idx], i, j))\n",
     "    for idx, (i, j) in enumerate(obs_rc_locs)\n",
     "]"
    ]
