--- a/exercises/notebooks/SV_obsvals_weights_noise.ipynb
+++ b/exercises/notebooks/SV_obsvals_weights_noise.ipynb
@@ -12,6 +12,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import flopy\n",
     "import pyemu"
    ]
   },
@@ -38,7 +39,10 @@
    "outputs": [],
    "source": [
     "working_d = \"model_and_pest_files\"\n",
-    "assert os.path.exists(working_d)"
+    "assert os.path.exists(working_d)\n",
+    "sim = flopy.mf6.MFSimulation.load(sim_ws=working_d)\n",
+    "gwf = sim.get_model()\n",
+    "top = gwf.dis.top.array"
    ]
   },
   {
@@ -85,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nnobs = obs.loc[pd.notna(obs.usecol), :]"
+    "obs.columns"
    ]
   },
   {
@@ -94,11 +98,29 @@
    "id": "7",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nnobs = obs.loc[pd.notna(obs.usecol), :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "prefixes = [\"wt\", \"aq\", \"lake-stage\", \"lake-swgw\", \"riv-flow\", \"riv-swgw\", \"diff\"]\n",
     "for prefix in prefixes:\n",
-    "    print(prefix)\n",
     "    uobs = nnobs.loc[nnobs.usecol.str.contains(prefix), :].copy()\n",
+    "    print(prefix, uobs.shape)\n",
     "    uobs[\"datetime\"] = pd.to_datetime(uobs.datetime)\n",
     "    for usecol in uobs.usecol.unique():\n",
     "        uuobs = uobs.loc[uobs.usecol == usecol, :].copy()\n",
@@ -110,19 +132,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
     "obs[\"weight\"] = 0.0\n",
     "obs[\"standard_deviation\"] = np.nan\n",
-    "obs[\"lower_bound\"] = np.nan"
+    "obs[\"lower_bound\"] = np.nan\n",
+    "obs[\"upper_bound\"] = np.nan"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,9 +161,14 @@
     "        obs.loc[hist_uobs.obsnme, \"weight\"] = 3.0\n",
     "        obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = 0.3\n",
     "    elif \"diff\" in prefix:\n",
-    "        obs.loc[hist_uobs.obsnme, \"weight\"] = 5.0\n",
-    "        obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = 0.05\n",
-    "        pass\n",
+    "        print(prefix)\n",
+    "        obs.loc[hist_uobs.obsnme, \"weight\"] = [\n",
+    "            5.0 if oval > 0.1 else 1.0 for oval in hist_uobs.obsval\n",
+    "        ]\n",
+    "        obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = [\n",
+    "            min(0.01, oval * 0.1) for oval in hist_uobs.obsval\n",
+    "        ]\n",
+    "        obs.loc[hist_uobs.obsnme, \"lower_bound\"] = 0.0\n",
     "    else:\n",
     "        obs.loc[hist_uobs.obsnme, \"weight\"] = 2.0\n",
     "        obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = 0.5"
@@ -149,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,6 +194,7 @@
     "    )\n",
     "    obs.loc[hist_uobs.obsnme, \"weight\"] = hist_uobs.weight.values\n",
     "    obs.loc[hist_uobs.obsnme, \"datetime\"] = hist_uobs.datetime\n",
+    "    obs.loc[hist_uobs.obsnme, \"lower_bound\"] = 0.0\n",
     "\n",
     "    print(hist_uobs.loc[:, [\"obsval\", \"standard_deviation\", \"weight\"]])"
    ]
@@ -173,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,21 +256,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "noise"
+    "lbnd = obs.loc[pd.notna(obs.lower_bound), \"lower_bound\"]\n",
+    "for name, bnd in zip(lbnd.index, lbnd.values):\n",
+    "    vals = noise.loc[:, name].values\n",
+    "    vals[vals < bnd] = bnd\n",
+    "    noise.loc[:, name] = vals\n",
+    "    print(name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
     "noise.to_csv(os.path.join(working_d, \"noise.csv\"))\n",
+    "pst.pestpp_options = {\"ies_par_en\": pst.pestpp_options[\"ies_par_en\"]}\n",
     "pst.pestpp_options[\"ies_obs_en\"] = \"noise.csv\"\n",
     "pst.control_data.noptmax = -2\n",
     "pst.write(os.path.join(working_d, \"pest.pst\"), version=2)\n",
@@ -251,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,13 +303,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pst.control_data.noptmax = 2\n",
+    "pst.control_data.noptmax = 6\n",
     "pst.pestpp_options[\"ies_num_reals\"] = 50\n",
     "pst.pestpp_options[\"ies_bad_phi_sigma\"] = 1.75\n",
+    "pst.pestpp_options[\"ies_n_iter_reinflate\"] = [2, 999]\n",
+    "pst.pestpp_options[\"ies_reinflate_num_reals\"] = [50, -50]\n",
+    "pst.pestpp_options[\"ies_multimodal_alpha\"] = 0.99\n",
+    "\n",
     "pst.write(os.path.join(working_d, \"pest.pst\"), version=2)\n",
     "pyemu.os_utils.start_workers(\n",
     "    working_d,\n",
@@ -282,30 +321,30 @@
     "    \"pest.pst\",\n",
     "    num_workers=10,\n",
     "    worker_root=\".\",\n",
-    "    master_dir=\"master_ies_advanced\",\n",
+    "    master_dir=\"master_ies_advanced_mm2\",\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": []
