--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -127,6 +127,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = pd.read_csv(os.path.join(pf.new_d, \"swgw-longterm-means.csv\"), index_col=0)\n",
+    "df = pf.add_observations(\n",
+    "    \"swgw-longterm-means.csv\",\n",
+    "    index_cols=\"quantity\",\n",
+    "    prefix=\"forecasts\",\n",
+    "    obsgp=\"forecasts\",\n",
+    "    ofile_sep=\",\",\n",
+    ")\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "obs_csv_files = [\n",
     "    f for f in os.listdir(pf.new_d) if f.startswith(\"sv.gwf\") and f.endswith(\".csv\")\n",
     "]\n",
@@ -139,14 +157,13 @@
     "obs_csv_files.extend(\n",
     "    [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.sfr\") and f.endswith(\".csv\")]\n",
     ")\n",
-    "\n",
     "obs_csv_files"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -603,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +701,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "33",
+   "id": "34",
    "metadata": {},
    "source": [
     "assert pst.phi < 1.e7"
@@ -693,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,14 +758,6 @@
     "pst.write(os.path.join(pf.new_d, \"test.pst\"), version=2)\n",
     "pyemu.os_utils.run(\"pestpp-ies test.pst\", cwd=pf.new_d)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -764,21 +773,29 @@
    "id": "40",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pyemu.os_utils.start_workers(\n",
-    "    pf.new_d,\n",
-    "    \"pestpp-ies\",\n",
-    "    \"pest.pst\",\n",
-    "    worker_root=\".\",\n",
-    "    num_workers=10,\n",
-    "    master_dir=\"master_prior_mc\",\n",
-    ")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pyemu.os_utils.start_workers(\n",
+    "#     pf.new_d,\n",
+    "#     \"pestpp-ies\",\n",
+    "#     \"pest.pst\",\n",
+    "#     worker_root=\".\",\n",
+    "#     num_workers=10,\n",
+    "#     master_dir=\"master_prior_mc\",\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": []
