--- a/exercises/synthetic-valley/SV_flopy.ipynb
+++ b/exercises/synthetic-valley/SV_flopy.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_frequency = \"monthly\"  # monthly or annual\n",
+    "sample_frequency = \"annual\"  # monthly or annual\n",
     "useET = True"
    ]
   },
@@ -411,10 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k33 /= k11\n",
-    "kv3 = k33[2, :, :]\n",
-    "kv3[clay_location == 0] = 1.0\n",
-    "kv3[clay_location == 1] = kvkh_ratio"
+    "nc_ds[\"clay_kv\"].to_numpy().max()"
    ]
   },
   {
@@ -424,13 +421,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(k33[2, :, :])"
+    "k33 /= k11\n",
+    "kv3 = k33[2, :, :]\n",
+    "kv3[clay_location == 0] = 1.0\n",
+    "kv3[clay_location == 1] = kvkh_ratio"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(k33[2, :, :])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -450,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42",
+   "id": "43",
    "metadata": {},
    "source": [
     "## Define the recharge"
@@ -484,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44",
+   "id": "45",
    "metadata": {},
    "source": [
     "## Define the evt"
@@ -519,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46",
+   "id": "47",
    "metadata": {},
    "source": [
     "## Define the river"
@@ -549,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50",
+   "id": "51",
    "metadata": {},
    "source": [
     "## Define the wells"
@@ -593,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55",
+   "id": "56",
    "metadata": {},
    "source": [
     "## Define the well for the prediction"
@@ -678,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57",
+   "id": "58",
    "metadata": {},
    "source": [
     "## Define the head observations"
@@ -701,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -803,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +948,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75",
+   "id": "76",
    "metadata": {},
    "source": [
     "## Build the model"
@@ -947,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1171,7 +1181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1187,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1199,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94",
+   "id": "95",
    "metadata": {},
    "source": [
     "## Plot the results\n",
@@ -1220,7 +1230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98",
+   "id": "99",
    "metadata": {},
    "source": [
     "### Simulated Heads and Drawdown"
@@ -1283,7 +1293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1292,7 +1302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "100",
+   "id": "101",
    "metadata": {},
    "source": [
     "#### Calibration"
@@ -1301,7 +1311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1311,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,7 +1351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "104",
+   "id": "105",
    "metadata": {},
    "source": [
     "##### Calculate the residuals"
@@ -1350,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1360,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1371,7 +1381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1381,7 +1391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,7 +1402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1402,7 +1412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1426,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1437,7 +1447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "113",
+   "id": "114",
    "metadata": {},
    "source": [
     "##### Plot the residuals"
@@ -1446,7 +1456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1459,7 +1469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,7 +1479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116",
+   "id": "117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,7 +1489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117",
+   "id": "118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1490,7 +1500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118",
+   "id": "119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1501,7 +1511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119",
+   "id": "120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1512,7 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120",
+   "id": "121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1522,7 +1532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121",
+   "id": "122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1572,7 +1582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "122",
+   "id": "123",
    "metadata": {},
    "source": [
     "**NOTE:** There is spatial bias in the simulated results (*i.e.*, residuals are positive in the Northeast and negative in the Southwest)."
@@ -1580,7 +1590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "123",
+   "id": "124",
    "metadata": {},
    "source": [
     "#### Case A"
@@ -1589,7 +1599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "124",
+   "id": "125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1610,7 +1620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125",
+   "id": "126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1635,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "126",
+   "id": "127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1645,7 +1655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "127",
+   "id": "128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1655,7 +1665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "128",
+   "id": "129",
    "metadata": {},
    "source": [
     "#### Extra Run"
@@ -1664,7 +1674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "129",
+   "id": "130",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1685,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "130",
+   "id": "131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1710,7 +1720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "131",
+   "id": "132",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1720,7 +1730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "132",
+   "id": "133",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1730,7 +1740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "133",
+   "id": "134",
    "metadata": {},
    "source": [
     "### Streamflow results"
@@ -1739,7 +1749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "134",
+   "id": "135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1754,7 +1764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135",
+   "id": "136",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1779,7 +1789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "136",
+   "id": "137",
    "metadata": {},
    "source": [
     "### Lake stage"
@@ -1788,7 +1798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "137",
+   "id": "138",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1798,7 +1808,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "138",
+   "id": "139",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1809,7 +1819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "139",
+   "id": "140",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1831,7 +1841,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "140",
+   "id": "141",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1841,7 +1851,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "141",
+   "id": "142",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1892,7 +1902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "142",
+   "id": "143",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1903,7 +1913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "143",
+   "id": "144",
    "metadata": {},
    "outputs": [],
    "source": []
