--- a/exercises/notebooks/SV_obsvals_weights_noise.ipynb
+++ b/exercises/notebooks/SV_obsvals_weights_noise.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "%matplotlib inline\n",
     "import os\n",
+    "import shutil\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -194,7 +195,6 @@
     "    )\n",
     "    obs.loc[hist_uobs.obsnme, \"weight\"] = hist_uobs.weight.values\n",
     "    obs.loc[hist_uobs.obsnme, \"datetime\"] = hist_uobs.datetime\n",
-    "    obs.loc[hist_uobs.obsnme, \"lower_bound\"] = 0.0\n",
     "\n",
     "    print(hist_uobs.loc[:, [\"obsval\", \"standard_deviation\", \"weight\"]])"
    ]
@@ -308,20 +308,23 @@
    "outputs": [],
    "source": [
     "pst.control_data.noptmax = 6\n",
-    "pst.pestpp_options[\"ies_num_reals\"] = 50\n",
+    "pst.pestpp_options[\"ies_num_reals\"] = 250\n",
     "pst.pestpp_options[\"ies_bad_phi_sigma\"] = 1.75\n",
-    "pst.pestpp_options[\"ies_n_iter_reinflate\"] = [2, 999]\n",
-    "pst.pestpp_options[\"ies_reinflate_num_reals\"] = [50, -50]\n",
+    "# pst.pestpp_options[\"ies_n_iter_reinflate\"] = [2, 999]\n",
+    "# pst.pestpp_options[\"ies_reinflate_num_reals\"] = [50, -50]\n",
     "pst.pestpp_options[\"ies_multimodal_alpha\"] = 0.99\n",
-    "\n",
+    "master_dir = \"master_ies_advanced_mm\"\n",
+    "if os.path.exists(master_dir):\n",
+    "    shutil.rmtree(master_dir)\n",
+    "os.makedirs(master_dir)\n",
     "pst.write(os.path.join(working_d, \"pest.pst\"), version=2)\n",
     "pyemu.os_utils.start_workers(\n",
     "    working_d,\n",
     "    \"pestpp-ies\",\n",
     "    \"pest.pst\",\n",
     "    num_workers=10,\n",
-    "    worker_root=\".\",\n",
-    "    master_dir=\"master_ies_advanced_mm2\",\n",
+    "    worker_root=master_dir,\n",
+    "    master_dir=master_dir,\n",
     ")"
    ]
   },
