--- a/exercises/notebooks/SV_obsvals_weights_noise.ipynb
+++ b/exercises/notebooks/SV_obsvals_weights_noise.ipynb
@@ -39,6 +39,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fore_csv_fname = os.path.join(\n",
+    "    \"..\", \"models\", \"synthetic-valley-truth-advanced-monthly\", \"swgw-longterm-means.csv\"\n",
+    ")\n",
+    "assert os.path.exists(fore_csv_fname)\n",
+    "foredf = pd.read_csv(fore_csv_fname, index_col=0)\n",
+    "foredf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "working_d = \"model_and_pest_files\"\n",
     "assert os.path.exists(working_d)\n",
     "sim = flopy.mf6.MFSimulation.load(sim_ws=working_d)\n",
@@ -49,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,15 +111,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for col in foredf.columns:\n",
+    "    fobs = obs.loc[obs.obsnme.str.contains(col), :]\n",
+    "    for name, q in zip(fobs.obsnme, fobs.quantity):\n",
+    "        obs.loc[name, \"obsval\"] = foredf.loc[q, col]\n",
+    "        print(col, q)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,14 +352,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "22",
    "metadata": {},
    "outputs": [],
@@ -348,6 +361,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": []
